--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -6,7 +6,7 @@
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
   transition: opacity .5s ease;
-  z-index: -100;
+  z-index: -10;
 }
 
 .nav {
